--- a/posts/android-infrastructure-setup.mdx
+++ b/posts/android-infrastructure-setup.mdx
@@ -235,5 +235,5 @@ We have explained some infrastructure plumbing needed for our Android code sampl
 
 ### Next
 
-- Next we will describe some <Link href='/posts/android-coding-key-points'>Android Coding Key Points</Link>
+- Next I provide an <Link href='/posts/android-coding-key-points'>Android Code Overview</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
