--- a/posts/api-architecture-node.mdx
+++ b/posts/api-architecture-node.mdx
@@ -142,7 +142,7 @@ export class CompanyService {
 }
 ```
 
-The OAuth integration and its claims handling uses exactly the same techniques as the second code sample, summarised earlier in its <Link href='/posts/updated-api-coding-key-points'>API Coding Key Points</Link>. Therefore I will not repeat them, and these posts will instead only focus only on newer features.
+The OAuth integration and its claims handling uses exactly the same techniques as the second code sample, summarised earlier in its <Link href='/posts/updated-api-coding-key-points'>API Code Overview</Link>. Therefore I will not repeat them, and these posts will instead only focus only on newer features.
 
 ### Main Feature 2: Production Supportability
 
@@ -189,5 +189,5 @@ We have described the key behaviour of our final Node.js API. In the next post w
 
 ### Next
 
-- Next we will take a look at the <Link href='/posts/final-nodeapi-coding-key-points'>Node.js API Coding Key Points</Link>
+- Next we will take a look at the <Link href='/posts/final-nodeapi-coding-key-points'>Node.js API Code Overview</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
