--- a/posts/cloud--native-updates.mdx
+++ b/posts/cloud--native-updates.mdx
@@ -1,6 +1,6 @@
 # Cloud Native Updates
 
-Previously we described this blog’s <Link href='/posts/serverless-api-coding-model'>Serverless API Coding Key Points</Link>. This completes a cloud version 1 architecture, where the SPA is deployed to a *Content Delivery Network*, and the API side of the architecture runs without needing to manage any infrastructure.
+Previously we described this blog’s <Link href='/posts/serverless-api-coding-model'>Serverless API Code Overview</Link>. This completes a cloud version 1 architecture, where the SPA is deployed to a *Content Delivery Network*, and the API side of the architecture runs without needing to manage any infrastructure.
 
 ### Cloud Native
 
