--- a/posts/desktop-app-coding-key-points.mdx
+++ b/posts/desktop-app-coding-key-points.mdx
@@ -1,6 +1,6 @@
-# Desktop App – Coding Key Points
+# Desktop App – Code Overview
 
-Previously we explained <Link href='/posts/desktop-apps-overview'>How to Run the Desktop Code Sample</Link>, which included some test scenarios. We will complete the posts for the initial Electron desktop app by describing some coding key points.
+Previously we explained <Link href='/posts/desktop-apps-overview'>How to Run the Desktop Code Sample</Link>, which included some test scenarios. We will complete the posts for the initial Electron desktop app by describing some code-level details.
 
 ### Desktop Technology
 
