--- a/posts/ios-code-sample-infrastructure.mdx
+++ b/posts/ios-code-sample-infrastructure.mdx
@@ -151,5 +151,5 @@ We have explained some infrastructure plumbing needed by our iOS code sample. Us
 
 ### Next
 
-- Next we will describe some <Link href='/posts/ios-code-sample-coding-key-points'>iOS Coding Key Points</Link>
+- Next we will describe some <Link href='/posts/ios-code-sample-coding-key-points'>iOS Code Overview</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
