--- a/posts/ios-code-sample-overview.mdx
+++ b/posts/ios-code-sample-overview.mdx
@@ -1,6 +1,6 @@
 # iOS Code Sample – Overview
 
-Previously we covered <Link href='/posts/android-coding-key-points'>Android Coding Key Points</Link> for our initial mobile app. Next we will provide the same OAuth secured app for iOS, using Xcode and SwiftUI, with AppAuth libraries and a modern coding style. The app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the mobile app's code to get a fully integrated solution.
+Previously we covered <Link href='/posts/android-coding-key-points'>Android Code Overview</Link> for our initial mobile app. Next we will provide the same OAuth secured app for iOS, using Xcode and SwiftUI, with AppAuth libraries and a modern coding style. The app connects to <Link href='/posts/cloud-hosting'>HTTPS endpoints hosted in AWS</Link>, so that you only need to run the mobile app's code to get a fully integrated solution.
 
 ### Features
 
