--- a/posts/net-core-code-sample-overview.mdx
+++ b/posts/net-core-code-sample-overview.mdx
@@ -1,6 +1,6 @@
 # .NET API – Overview
 
-Previously we explained the <Link href='/posts/final-nodeapi-coding-key-points'>Node.js API Coding Key Points</Link>, including some behaviours from this blog’s <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link> blog post. Next we will provide an equivalent API in C# and .NET.
+Previously we explained the <Link href='/posts/final-nodeapi-coding-key-points'>Node.js API Code Overview</Link>, including some behaviours from this blog’s <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link> blog post. Next we will provide an equivalent API in C# and .NET.
 
 ### Final API Code Sample Overview
 
