--- a/posts/serverless-api-coding-model.mdx
+++ b/posts/serverless-api-coding-model.mdx
@@ -1,4 +1,4 @@
-# Serverless API Coding Key Points
+# Serverless API Code Overview
 
 Previously I described this blog’s <Link href='/posts/serverless-api-deployment'>Serverless API Deployment</Link>. Next we will explain how we have coded this blog’s lambda based APIs, to include the behaviours from this blog’s <Link href='/posts/api-journey-server-side'>API Journey – Server Side</Link> blog post.
 
