--- a/posts/spa-back-end-for-front-end.mdx
+++ b/posts/spa-back-end-for-front-end.mdx
@@ -22,7 +22,7 @@ The cookie requirement is an awkward one for SPAs. When developing SPAs and APIs
 
 ### This Blog’s Backend for Frontend
 
-In 2021 I adopted the [Token Handler Pattern](https://github.com/curityio/spa-using-token-handler), which consists of the following API components that implement cookie security. These components are stateless and easy to manage, since cookies contain all state. You deploy cookie issuing APIs and they do not need to run on the computers of web developers.
+In 2021 I adopted the *Token Handler Pattern* which consists of the following API components that implement cookie security. These components are stateless and easy to manage, since cookies contain all state. You deploy cookie issuing APIs and they do not need to run on the computers of web developers.
 
 | Component | Description |
 | --------- | ----------- |
@@ -106,5 +106,5 @@ I explained the deployment variations for this blog's final SPA. When you use co
 
 ### Next
 
-- I provide a <Link href='/posts/final-spa-overview'>Final SPA</Link> that uses the token handler pattern.
+- I provide a <Link href='/posts/final-spa-overview'>Final SPA</Link> that uses cookies to call APIs.
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>.
