--- a/posts/spring-boot-api-oauth-integration.mdx
+++ b/posts/spring-boot-api-oauth-integration.mdx
@@ -355,5 +355,5 @@ We have implemented Java API Security in a requirements first manner, to impleme
 
 ### Next
 
-- Next we will describe other details of our <Link href='/posts/spring-boot-api-coding-model'>Java API Coding Key Points</Link>
+- Next we will describe other details of our <Link href='/posts/spring-boot-api-coding-model'>Java API Code Overview</Link>
 - For a list of all blog posts see the <Link href='/posts/index'>Index Page</Link>
