--- a/posts/updated-api-coding-key-points.mdx
+++ b/posts/updated-api-coding-key-points.mdx
@@ -4,7 +4,7 @@ The previous post I provided an <Link href='/posts/updated-spa-coding-key-points
 
 ### API Authorization Implementation
 
-In the first sample’s <Link href='/posts/basicapi-codingkeypoints'>API Coding Key Points</Link> we explained that OAuth processing consists of the following two main code areas:
+In the first sample’s <Link href='/posts/basicapi-codingkeypoints'>API Code Overview</Link> we explained that OAuth processing consists of the following two main code areas:
 
 | Responsibility | Description |
 | -------------- | ----------- |
