--- a/posts/web-technology-setup.mdx
+++ b/posts/web-technology-setup.mdx
@@ -573,7 +573,7 @@ I explained how to manage a web pipeline on a development computer. Later in thi
 
 ### Electron Desktop Apps
 
-In the native apps section of this blog I use [Electron](https://www.electronjs.org/) to develop OAuth-secured cross-platform desktop apps. An Electron app can also be built to ECMAScript modules, though doing so is a little tricky to figure out. The <Link href='/posts/final-desktop-app-coding-key-points/'>Final Desktop App - Coding Key Points</Link> post explains the techniques I use.
+In the native apps section of this blog I use [Electron](https://www.electronjs.org/) to develop OAuth-secured cross-platform desktop apps. An Electron app can also be built to ECMAScript modules, though doing so is a little tricky to figure out. The <Link href='/posts/final-desktop-app-coding-key-points/'>Final Desktop App - Code Overview</Link> post explains the techniques I use.
 
 ### Where Are We?
 
