--- a/posts/final-desktop-app-coding-key-points.mdx
+++ b/posts/final-desktop-app-coding-key-points.mdx
@@ -1,4 +1,4 @@
-# Final Desktop App – Coding Key Points
+# Final Desktop App – Code Overview
 
 Previously we introduced our <Link href='/posts/final-desktop-sample-overview'>Final Desktop Sample</Link> and explained its key behaviour. This post summarises the main coding techniques. See also the <Link href='/posts/api-journey-client-side'>Client Side API Journey</Link> to understand the background and the requirements being met.
 
